# gcf-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: decode.rs  decode_generic.rs  delta.rs  encode.rs  generic.rs  generic_delta.rs  lib.rs  main.rs  packroot.rs  scalar.rs  session.rs  stream.rs  stream_generic.rs  types.rs
tests/: conformance_v2.rs  fuzz_parallel.rs  generic_delta_fuzz.rs  multiformat_fuzz.rs  rerun_csv.rs  rerun_json_1b.rs  rerun_missing.rs  roundtrip_v2.rs  toml_fuzz.rs  yaml_1b.rs
