[package]
name = "gcf"
version = "0.5.0"
edition = "2021"
description = "Drop-in JSON replacement for AI pipelines. 79% fewer tokens. 90.5% comprehension across 10 models. Zero dependencies."
license = "MIT"
repository = "https://github.com/blackwell-systems/gcf-rust"
homepage = "https://gcformat.com/"
keywords = ["gcf", "llm", "mcp", "tokens", "wire-format"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
