[package]
name = "gcf"
version = "1.0.0"
edition = "2021"
description = "Drop-in JSON replacement for AI pipelines. 79% fewer tokens. 90.5% comprehension across 10 models. Zero dependencies."
license = "MIT"
repository = "https://github.com/blackwell-systems/gcf-rust"
homepage = "https://gcformat.com/"
keywords = ["gcf", "llm", "mcp", "tokens", "wire-format"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[lib]
name = "gcf"
path = "src/lib.rs"

[[bin]]
name = "gcf"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
