[package]
name = "gcf"
version = "2.2.0"
edition = "2021"
description = "The AI-native wire format for structured data. 50-92% fewer tokens than JSON. 100% comprehension on every frontier model. Zero dependencies (except serde)."
license = "MIT"
repository = "https://github.com/blackwell-systems/gcf-rust"
homepage = "https://gcformat.com/"
keywords = ["gcf", "llm", "mcp", "tokens", "wire-format"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[lib]
name = "gcf"
path = "src/lib.rs"

[[bin]]
name = "gcf"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
csv = "1"
rmp-serde = "1"
toml = "0.8"
rayon = "1"
